@@ -17,4 +17,15 @@ Java JDK (version X.X.X): Ensure that you have Java installed on your machine.
 JavaFX SDK (version Y.Y.Y): JavaFX is used for building the graphical user interface.
 
 ## Build and Run:
-Clone the Repository:
+
+1.Clone the Repository:
+git clone https://github.com/tharushikaDyayinna/Encrypt-Decrypt.git
+
+2.Compile the Java Code (if needed):
+javac -d out src/application/Main.java
+
+3.Run the JavaFX Application:
+java --module-path /path/to/javafx-sdk-21/lib --add-modules javafx.controls,javafx.fxml -cp out application.Main
+
+
+
